fix horizontal scrolling

--- a/src/components/Contactform/Contactform.css
+++ b/src/components/Contactform/Contactform.css
@@ -70,3 +70,26 @@ textarea {
 .skill-title {
   margin-top: 20px;
 } */
+
+/* Add media query for narrow screens */
+/* @media only screen and (max-width: 360px) {
+  .input-info {
+    padding: 10px;
+  }
+
+  .infield, 
+  textarea {
+    width: 100%;
+    max-width: 300px;
+  }
+
+  .submit {
+    padding: 15px;
+    width: 100%;
+    max-width: 280px;
+  }
+
+  .socials {
+    gap: 10px;
+  }
+} */
